--- a/n2exercici2/pom.xml
+++ b/n2exercici2/pom.xml
@@ -2,17 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>Tasca_S1_07_Joan_Caballero</artifactId>
+        <groupId>org.example</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>Tasca_S1_07_Joan_Caballero</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>n1exercici1</module>
-        <module>n1exercici2</module>
-        <module>n2exercici2</module>
-    </modules>
+    <artifactId>n2exercici2</artifactId>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
